# ocr-model-repo-scripts

./: README.md  pyproject.toml
scripts/: catalogue.py  model.py  ocr-model-repo.py
